# daily-flavors-app

./: .gitignore  .pre-commit-config.yaml  .semver.toml  CHANGELOG.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  release.yml  scraper-ecosystem.yml
app/: config.yaml  main.py
app/scrapers/: bubbas.py  culvers.py  kopps.py  murfs.py  oscars.py  utils.py
static/: index.html  script.js  styles.css
tests/: test_oscars_scraper.py  test_scraper_ecosystem.py  test_scraper_ui.py
