[project]
name = "daily-flavors-app"
description = "Daily frozen custard flavor scraper and web UI"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3,<5.0.0",
    "fastapi>=0.110.0,<1.0.0",
    "requests>=2.32.3,<3.0.0",
    "uvicorn>=0.29.0,<1.0.0",
    "selenium>=4.21.0,<5.0.0",
    "undetected-chromedriver>=3.5.5,<4.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "APScheduler>=3.10.4,<4.0.0",
    "urllib3>=2.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "flake8-pyproject",
    "black",
    "isort",
    "autoflake",
    "pip-audit",
    "pre-commit",
    "python-semantic-release"
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
ignore = "E501" # Ignore long lines, handled by Black 
exclude = ".git,__pycache__,.venv,venv,build,dist"

[tool.pytest.ini_options]
pythonpath = ["app"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
omit = [
    "tests/*",
    "__init__.py"
]
show_missing = true

[tool.pip-audit]
ignore-vulns = []

[tool.setuptools.packages.find]
include = ["app"]

# Configuration for python-semantic-release
[tool.semantic_release]
branch = "main"
